删除java -D